2003-01-19  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool: Recognize option --extract-maintainer.
	(func_get_maintainer): New function.
	* modules/*: Add Maintainer entry.

2003-01-16  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh: Add a table of contents. Add the module name as
	leftmost column. Add hyperlinks.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* modules/stpcpy: Distribute lib/stpcpy.h.
	* modules/setenv: Depend on alloca. Distribute lib/setenv.h.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool (func_create_testdir): Store config/* files in the main
	directory.
	* config.rpath: Move to ...
	* config/config.rpath: ... here.
	* modules/gettext: Contains config/config.rpath, not config.rpath.
	* modules/iconv: Likewise.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* modules/*: Add a description.
	* modules/strpbrk: Fix Makefile.am snippet.
	* modules/strtoimax: Fix dependencies.
	* modules/strtoumax: Likewise.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool (func_create_testdir): Substitute lib_OBJECTS.
	* modules/alloca (Makefile.am): All object files depend on alloca.h.
	* modules/stdbool (Makefile.am): All object files depend on stdbool.h.

2003-01-12  Paul Eggert  <eggert@twinsun.com>

	Finish renaming getstr -> getdelim2 and readline -> readlinebuffer,
	to avoid collisions with libcurses and libreadline.
	* getstr: Remove.
	* MODULES.html.sh: Remove getstr.
	* modules/getline: Depend on unlocked-io, not getstr.

2003-01-10  Bruno Haible  <bruno@clisp.org>

	* modules/alloca: Change Makefile.am requirements. Simplify Include
	requirements. Add lib/alloca_.h to file list.

2003-01-09  Bruno Haible  <bruno@clisp.org>

	* modules/stdbool: Change configure.ac, Makefile.am requirements.
	Simplify Include requirements. Add lib/stdbool.h.in to file list.

2003-01-09  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool (func_all_modules): Ignore files ending in ~.
	* MODULES.html.sh: Likewise.

2003-01-09    <karl@gnu.org>
