@@ -1,3 +1,7 @@
+2003-01-22  Bruno Haible  <bruno@clisp.org>
+
+	* exit.h: New file, from GNU gettext.
+
 2003-01-11  Bruno Haible  <bruno@clisp.org>
 
 	* stpcpy.h (stpcpy): Use ANSI C function declarations.
